ChangeLog for KNotes
====================

2005/02/21  Michael Brade <brade@kde.org>

    * fixed #93001: strikeout text now actually works for multiple paragraphs
	   as well.

2005/02/05  Michael Brade <brade@kde.org>

    * fixed crash when deleting a note
    * KNotes startup much faster

2005/02/02  Michael Brade <brade@kde.org>

    * implemented #69137: read-only support for the notes, i.e. the ability to
      lock a note from being modified.

2005/01/16  Michael Brade <brade@kde.org>

    * read the most recent instead of always taking the local knotesui.rc file
    * started implementing alarms for the notes

2005/01/09  Michael Brade <brade@kde.org>

    * fixed #76435: most wanted feature: find function for the notes.
      At the moment the shortcut doesn't work.

2004/11/28  Michael Brade <brade@kde.org>

    * fixed #90744, #91702, #92596, #93499: save modified notes on quit, may
      not have happened when the note still had focus. Also, the problem
      with knotesnotes.ics is gone now.

2004/09/27  Michael Brade <brade@kde.org>

    * no compile-time dependency on kdebase allowed, so read kwinrc directly

2004/08/31  Michael Brade <brade@kde.org>

    * now KNotes always saves the desktop of its notes since this is what one
      would expect, I guess. Visible change: if you hide a note, change to
      another desktop and show it again, the note will be shown on the desktop
      where it has been hidden. And more important, if a note is sticky it will
      still be sticky after it is first hidden and then shown again. Let's see
      what the users' feedback will be.

      This will also make it possible to properly implement the often requested
      hide all/show all notes feature.
    * fixed #29242, #44761, #65090: implemented Show All/Hide All Notes and
      added a global shortcut for both actions. Thanks to Jakob Schroeter for
      the initial patch on which this is based and the idea to add the global