@@ -55,6 +55,9 @@ KNotesAlarm::KNotesAlarm( KNotesResourceManager *manager, QObject *parent, const
 void KNotesAlarm::checkAlarms()
 {
     QDateTime from = KNotesGlobalConfig::self()->alarmsLastChecked().addSecs( 1 );
+    if ( !from.isValid() )
+        from.setTime_t( 0 );
+
     KNotesGlobalConfig::self()->setAlarmsLastChecked( QDateTime::currentDateTime() );
     QValueList<KCal::Alarm *> alarms = m_manager->alarms( from, KNotesGlobalConfig::self()->alarmsLastChecked() );
 
@@ -65,6 +68,8 @@ void KNotesAlarm::checkAlarms()
         KCal::Incidence *incidence = (*it)->parent();
         notes += incidence->summary();
     }
+
+    KNotesGlobalConfig::writeConfig();
 
     if ( !notes.isEmpty() )
         KMessageBox::informationList( 0, i18n("The following notes triggered alarms:"), notes, i18n("Alarm") );
